# c-_lab2

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  CMakePresets.json  lab2.cpp  lab2.h  test_version.cpp
.github/workflows/: release.yml
